<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/foodImageText" />

    <TextView
        android:id="@+id/cook"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/cookName"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cookCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/cookCity"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/cook" />

    <CheckedTextView
        android:id="@+id/veganCheckmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:checkMark="@android:drawable/checkbox_on_background"
        android:text="@string/isVeganCheckmark"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/cookPhone" />

    <CheckedTextView
        android:id="@+id/vegaCheckmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checkMark="@android:drawable/checkbox_on_background"
        android:text="@string/isVegaCheckmark"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/mealName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/veganCheckmark" />

    <TextView
        android:id="@+id/mealName"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mealName"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage" />

    <TextView
        android:id="@+id/mealPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/mealPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealName"
        android:textSize="16sp"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/mealDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mealDescription"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealPrice" />

    <TextView
        android:id="@+id/mealDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/servedOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealDescription" />

    <TextView
        android:id="@+id/mealDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mealDate"
        app:layout_constraintStart_toEndOf="@+id/mealDateText"
        app:layout_constraintTop_toBottomOf="@+id/mealDescription" />

    <TextView
        android:id="@+id/mealAllergyInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/allergiën"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealDateText" />

    <TextView
        android:id="@+id/mealAllergyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/allergenicInfo"
        app:layout_constraintStart_toEndOf="@+id/mealAllergyInfoText"
        app:layout_constraintTop_toBottomOf="@+id/mealDate" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/aanmelden_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cookStreet"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constrainedWidth="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cookStreet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/cookCity" />

    <ImageView
        android:id="@+id/cookPhone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/cookEmail"
        app:layout_constraintTop_toBottomOf="@+id/cookStreet"
        app:srcCompat="@drawable/icon_phone" />

    <ImageView
        android:id="@+id/cookEmail"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/cookStreet"
        app:srcCompat="@drawable/icon_mail" />

    <ImageView
        android:id="@+id/cookSms"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cookPhone"
        app:layout_constraintTop_toBottomOf="@+id/cookStreet"
        app:srcCompat="@drawable/icon_sms" />

</androidx.constraintlayout.widget.ConstraintLayout>